--- a/public/index.html
+++ b/public/index.html
@@ -16,9 +16,15 @@
     <title>React App</title>
   </head>
   <body>
-    <button id="add">+</button>
+    <!-- <button id="add">+</button>
     <span>0</span>
-    <button id="minus">-</button>
+    <button id="minus">-</button> -->
+
+    <h1>To Dos</h1>
+    <form>
+      <input type="text" placeholder="write to do">
+      <button>Add</button>
+    </form>
     
     
   </body>
