--- a/public/index.html
+++ b/public/index.html
@@ -16,16 +16,15 @@
     <title>React App</title>
   </head>
   <body>
-    <!-- <button id="add">+</button>
-    <span>0</span>
-    <button id="minus">-</button> -->
+    <div id="root"></div>
 
-    <h1>To Dos</h1>
+    <!-- <h1>To Dos</h1>
     <form>
       <input type="text" placeholder="write to do">
       <button>Add</button>
     </form>
-    
+    <ul></ul>
+     -->
     
   </body>
   <!-- <script src="../src/index.js"></script> -->
